--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           background-image: url('https://i.postimg.cc/jjHsgnpK/pexels-pixabay-417344.jpg');
         "
       >
+        #lastcard
         <h3>Explore the world</h3>
       </div>
       <div
